bplan/real-modules/laxman_mesos_vpc/vpn_sg.tf
resource "aws_security_group" "vpn_sg" {
  # tags {
  #   Name = "${var.env}-${var.region}-vpn"
  # }

  name        = "${var.env}-${var.region}-vpn"
  description = "Allow ssh to ${var.env}-vpn from anywhere"

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 1194
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 1194
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 943
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 4500
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 500
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 0
    to_port     = 50
    protocol    = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["114.143.194.102/32"]
  }

  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["183.87.60.142/32"]
}

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }
  
  vpc_id = "${aws_vpc.demo.id}"
}
